gcc/testsuite/rust/rustc/ui/issues/issue-23966.rs
fn main() {
    "".chars().fold(|_, _| (), ());
// { dg-error ".E0277." "" { target *-*-* } .-1 }
}

